--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
 <html>
-  <head></head>
+  <head>
+    <<title>Enjoy Chatting!</title>
+    <meta charset="utf-8">  
+    </meta>
+  </head>
+  <body>
+     
+  </body>
+  
 </html>
