--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <<title>Enjoy Chatting!</title>
-    <meta charset="utf-8">  
-    </meta>
+    <title>Chatbot</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-     
+    <div class="container" id="head">
+      <center><header>Your friend - ask anything!</header></center>
+    </div> 
+    <div class="container" align="center">
+      <div class="container-darker" id="messages"></div>
+
+      <div class="input-group mb3 input-group-lg">
+        <span class="input-group-text">>_</span>
+        <input type="text" class="form-control" id="text">
+        <button type="button" class="btn btn-success" id="send">Send</button>
+      </div>
+    </div>   
   </body>
-  
+  <script src="script.js"></script>
 </html>
